--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,21 @@
             <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-10 reveal active">
                 Access comprehensive test materials organized by chapter. Each resource has been carefully curated to help you master the subject matter with confidence.
             </p>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '24c61a9493accda244f586c4257786e5',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/24c61a9493accda244f586c4257786e5/invoke.js"></script>
+
+
+		
             <a href="#chapters" class="btn-explore inline-block bg-indigo-600 text-white font-semibold px-8 py-3 rounded-full text-lg hover:bg-indigo-700 shadow-lg reveal active">
                 Start Exploring
                 <i class="fas fa-arrow-right ml-2"></i>
