--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
     <style>
+
+
+		<script type='text/javascript' src='//pl26525064.profitableratecpm.com/14/4d/8e/144d8e7b6ab6db5fd60f66a50112fa99.js'></script>
+
+	    
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #f8f9fa;
